--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,7 +7,8 @@
 
 #root {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -22,6 +23,11 @@
     margin-top: 15px;
     justify-content: space-between;
     align-items: center;
+}
+
+
+.post__btns {
+    display: flex;
 }
 
 
@@ -56,4 +62,18 @@
 .page__current {
     border: 2px solid orange;
     font-weight: bold;
+}
+
+
+.navbar {
+    height: 50px;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    padding:  0 15px;
+    background: lightgray;
+}
+
+.navbar__links {
+    margin-left: auto;
 }
